# ai-agent-mbi

./: .env.example  .gitignore  README.md  Readme.md  pyproject.toml
src/: config.py  main.py  settings.py
src/agent/: agent_007.py
src/llm/: base_client.py  client_factory.py  gpt4all_client.py  openai.py  openai_client.py
