[project]
name = "ai-agent-mbi"
version = "0.1.0"
description = "Jira Ticket Classification AI Agent"
authors = [
    { name = "Marius Iordache", email = "marius.technical.leader@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "openai (>=1.95.0,<2.0.0)",
    "llama-index (>=0.12.48,<0.13.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "huggingface (>=0.0.1,<0.0.2)",
    "jira (>=3.8.0,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "gpt4all (>=2.8.2,<3.0.0)",
    "fastapi (>=0.116.0,<0.117.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
